# bazel-gazelle-python

./: .bazelrc  BUILD.bazel  README.md  WORKSPACE  deps.bzl  go.mod  go.sum
.trunk/: trunk.yaml
internal/: BUILD.bazel  modules.go  modules_test.go
manifest/: BUILD.bazel  defs.bzl  main.go  wheel.go  wheel_test.go
python/: BUILD.bazel  analyzer.go  configuration.go  configuration_test.go  kinds.go  language.go  module.go  module_test.go  resolver.go
python/parser/: BUILD.bazel  parse.go  parse_test.go
test/: BUILD.bazel  external_modules.tsv  internal_modules.txt  requirements.txt
test/basic/: BUILD.in  README.md  external_modules.tsv  internal_modules.txt
test/basic/python/: BUILD.out  mod.py
test/basic/python/pkg1/: BUILD.out  __init__.py  bar.py
test/basic/python/pkg1/subpkg1/: BUILD.out
test/basic/python/pkg2/: BUILD.out  baz.py
test/file_rename/: BUILD.in  BUILD.out  README.md
test/missing_import/: BUILD.out  README.md  expectedStderr.txt  mod.py
test/yaml_external_modules_map/: BUILD.in  BUILD.out  README.md  external_modules.yaml  mod.py
