load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library", "go_test")

go_library(
    name = "manifest_lib",
    srcs = [
        "main.go",
        "wheel.go",
    ],
    importpath = "github.com/siddharthab/bazel-gazelle-python/manifest",
    visibility = ["//visibility:private"],
    deps = ["//internal"],
)

go_binary(
    name = "manifest",
    embed = [":manifest_lib"],
    visibility = ["//visibility:public"],
)

go_test(
    name = "manifest_test",
    srcs = ["wheel_test.go"],
    embed = [":manifest_lib"],
)
