load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "python",
    srcs = [
        "analyzer.go",
        "configuration.go",
        "kinds.go",
        "language.go",
        "module.go",
        "resolver.go",
    ],
    importpath = "github.com/siddharthab/bazel-gazelle-python/python",
    visibility = ["//visibility:public"],
    deps = [
        "//internal",
        "//python/parser",
        "@bazel_gazelle//config:go_default_library",
        "@bazel_gazelle//label:go_default_library",
        "@bazel_gazelle//language:go_default_library",
        "@bazel_gazelle//repo:go_default_library",
        "@bazel_gazelle//resolve:go_default_library",
        "@bazel_gazelle//rule:go_default_library",
        "@in_gopkg_yaml_v2//:yaml_v2",
    ],
)

go_test(
    name = "python_test",
    srcs = [
        "configuration_test.go",
        "module_test.go",
    ],
    embed = [":python"],
    deps = [
        "//internal",
        "//python/parser",
        "@bazel_gazelle//rule:go_default_library",
        "@com_github_google_go_cmp//cmp",
    ],
)
