load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "parser",
    srcs = ["parse.go"],
    importpath = "github.com/siddharthab/bazel-gazelle-python/python/parser",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_go_python_gpython//ast",
        "@com_github_go_python_gpython//parser",
        "@com_github_go_python_gpython//py",
    ],
)

go_test(
    name = "parser_test",
    srcs = ["parse_test.go"],
    embed = [":parser"],
    deps = ["@com_github_google_go_cmp//cmp"],
)
